--- a/.github/actions/matrix/action.yml
+++ b/.github/actions/matrix/action.yml
@@ -14,4 +14,4 @@ outputs:
     description: "Comma separated list of matrix values"
 runs:
   using: "node12"
-  main: "materix.js"
+  main: "index.js"
