--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -25,7 +25,7 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
 
       - name: "Custom action"
-        uses: ../.github/actions/matrix
+        uses: .github/actions/matrix
 
       - name: Get commit message
         id: get_commit_message
