Actions [ci partial]

--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -62,14 +62,14 @@ jobs:
           requested_all_clients=${{ contains(steps.get_commit_message.outputs.commit_message, 'ci full') }}
           on_main_branch=${{ steps.get_branch.outputs.branch == 'main' || steps.get_branch.outputs.branch == 'master' }}
 
-          if [ "$requested_all_clients" = true ]; then
+          if [ "$requested_all_clients" = "true" ]; then
             echo "::notice::Commit message included 'ci full' so setting CI matrix to include all clients"
           fi
 
-          if [ "$on_main_branch" = true || "$requested_all_clients" = true ]; then
+          if [ "$on_main_branch" = "true" || "$requested_all_clients" = "true" ]; then
               if [ "$requested_all_clients" = true ]; then
                 echo "::notice::Commit message included 'ci full' so setting CI matrix to include all clients"
-              elif [ "$on_main_branch" = true ]; then
+              elif [ "$on_main_branch" = "true" ]; then
                 echo "::notice::Running on master branch so setting CI matrix to include all clients"
               fi;
               echo "::set-output name=matrix::[\"main\",\"demo\"]"
