--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,102 +1,48 @@
 name: Customizable
+
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - master
   pull_request:
-    # run when PRs are opened, re-opened or get commits added
-    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+    inputs:
+      allClients:
+        description: 'Run all clients (true/false)'
+        required: false
+        default: 'false'
 
 jobs:
-  configure_matrix:
-    name: Configure CI matrix
+  build:
     runs-on: ubuntu-latest
     outputs:
-      branch: ${{ steps.get_branch.outputs.branch }}
-      commit_message: ${{ steps.get_commit_message.outputs.commit_message }}
       matrix: ${{ steps.set-matrix.outputs.matrix }}
-
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-        with:
-          # required for pull_requests so we can do HEAD^2 to get the commit message
-          fetch-depth: 2
 
-      - name: Get commit message
-        id: get_commit_message
+      - name: Prepare Matrix
+        id: set-matrix
         run: |
-          if [[ '${{ github.event_name }}' == 'push' ]]; then
-            echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD)
-          elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
-            echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD^2)
-          fi
-
-      - name: Get branch
-        id: get_branch
-        run: |
-          if [[ '${{ github.event_name }}' == 'push' ]]; then
-            echo "::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/} | tr / -)"
-          elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
-            echo "::set-output name=branch::$(echo ${GITHUB_HEAD_REF} | tr / -)"
-          fi
-
-        # - run: echo $GITHUB_CONTEXT
-        #   env:
-        #     GITHUB_CONTEXT: ${{ toJson(github) }}
-
-      - id: set-matrix
-        name: Set CI matrix
-        shell: bash
-        run: |
-          # debugging only
-          echo "commit_message: ${{steps.get_commit_message.outputs.commit_message}}"
-          echo "branch: ${{steps.get_branch.outputs.branch}}"
-
-          REQUESTED_ALL_CLIENTS=${{ contains(steps.get_commit_message.outputs.commit_message, 'ci full') }}
-          ON_MAIN_BRANCH=${{ steps.get_branch.outputs.branch == 'main' || steps.get_branch.outputs.branch == 'master' }}
-
-          # default client - used when we're running against a pull request
-          CLIENTS=("culturecode")
-
-          # join a bash array of strings into a JSON-compatible array
-          # https://stackoverflow.com/a/26809278/559596
-          json_array() {
-            echo -n '['
-            while [ $# -gt 0 ]; do
-              x=${1//\\/\\\\}
-              echo -n \"${x//\"/\\\"}\"
-              [ $# -gt 1 ] && echo -n ','
-              shift
-            done
-            echo ']'
-          }
-
-          if [[ "$ON_MAIN_BRANCH" = "true" || "$REQUESTED_ALL_CLIENTS" = "true" ]]; then
-              if [ "$REQUESTED_ALL_CLIENTS" = "true" ]; then
-                  echo "::notice::Commit message included 'ci full' so setting CI matrix to include all clients"
-              elif [ "$ON_MAIN_BRANCH" = "true" ]; then
-                  echo "::notice::Running on master branch so setting CI matrix to include all clients"
-              fi;
-
-              # lookup all the clients in `lib/customization/*.rb`
-              IFS=$'\n'
-              CLIENTS=($(find ./customization -type f -maxdepth 1 -name "*.rb" -print0 | xargs -0 -I {} basename {} .rb))
-              unset IFS
+          if [[ ${{ github.event_name }} == 'pull_request' || (${{ github.event_name }} == 'workflow_dispatch' && ${{ github.event.inputs.allClients }} != 'true') ]]; then
+            echo "::set-output name=clients::[\"culturecode\"]"
           else
-              echo "::warning::This action is being run on a Pull Request so we're only running tests for the default client. Push a commit message containing \"ci full\" to run CI for all clients."
+            CLIENTS=$(ls lib/customization/*.rb | xargs -n1 basename | sed 's/.rb$//' | jq -R -s -c 'split("\n")[:-1]')
+            echo "::set-output name=clients::$CLIENTS"
           fi
-
-          matrix_json=$(json_array "${CLIENTS[@]}")
-          echo "::set-output name=matrix::$matrix_json"
 
   test:
-    needs: configure_matrix
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        client: ${{fromJson(needs.configure_matrix.outputs.matrix)}}
+        client: ${{fromJson(needs.build.outputs.clients)}}
+        ruby-version: ["3.2"]
       fail-fast: false
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
       - run: echo "Output ${{ needs.configure_matrix.outputs.matrix }}"
       - run: echo "Output ${{ fromJson(needs.configure_matrix.outputs.matrix) }}"
       - run: echo "🧖‍♀️ The job is running for client ${{ matrix.client }}."
