--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,24 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github
+            lib/customization
 
       - name: Prepare Matrix
         id: set-matrix
         run: |
+          echo "CLIENTS=" > $GITHUB_ENV
           if [[ "${{ github.event_name }}" == "pull_request" || ("${{ github.event_name }}" == "workflow_dispatch" && "${{ github.event.inputs.allClients }}" != "true") ]]; then
-            echo "::set-output name=clients::[\"culturecode\"]"
+            echo "[\"democlient\"]" >> $GITHUB_ENV
           else
             CLIENTS=$(ls lib/customization/*.rb | xargs -n1 basename | sed 's/.rb$//' | jq -R -s -c 'split("\n")[:-1]')
-            echo "::set-output name=clients::$CLIENTS"
+            echo "$CLIENTS" >> $GITHUB_ENV
           fi
+        env:
+          GITHUB_ENV: ${{ github.workspace }}/matrix_env
 
   test:
     needs: build
@@ -42,18 +49,19 @@ jobs:
       fail-fast: false
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "Output ${{ needs.configure_matrix.outputs.matrix }}"
-      - run: echo "Output ${{ fromJson(needs.configure_matrix.outputs.matrix) }}"
-      - run: echo "🧖‍♀️ The job is running for client ${{ matrix.client }}."
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - run: cat ${{ github.workspace }}/matrix_env
+        shell: bash
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "Output ${{ needs.configure_matrix.outputs.matrix }}"
+      - run: echo "Output ${{ fromJson(needs.configure_matrix.outputs.matrix) }}"
+      - run: echo "🧖‍♀️ The job is running for client ${{ matrix.client }}."
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
