--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,19 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: |
-            .github
-            lib/customization
+        # with:
+        #   sparse-checkout: |
+        #     .github
+        #     lib/customization
 
       - name: Prepare Matrix
         id: set-matrix
         run: |
-          echo "CLIENTS=" > $GITHUB_ENV
           if [[ "${{ github.event_name }}" == "pull_request" || ("${{ github.event_name }}" == "workflow_dispatch" && "${{ github.event.inputs.allClients }}" != "true") ]]; then
-            echo "[\"democlient\"]" >> $GITHUB_ENV
+            echo "CLIENTS=\"['culturecode']\"" >> $GITHUB_ENV
           else
-            CLIENTS=$(ls lib/customization/*.rb | xargs -n1 basename | sed 's/.rb$//' | jq -R -s -c 'split("\n")[:-1]')
-            echo "$CLIENTS" >> $GITHUB_ENV
+            CLIENTS=$(ls lib/customization/*.rb | xargs -n1 basename | sed 's/.rb$//' | jq -R -s -c 'split("\n")[:-1]' | jq -c .)
+            echo "CLIENTS=\"$CLIENTS\"" >> $GITHUB_ENV
           fi
         env:
           GITHUB_ENV: ${{ github.workspace }}/matrix_env
