--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
             CLIENTS=$(ls lib/customization/*.rb | xargs -n1 basename | sed 's/.rb$//' | jq -R -s -c 'split("\n")[:-1]' | jq -c .)
             echo "CLIENTS=\"$CLIENTS\"" >> $GITHUB_ENV
           fi
+
+          echo "`$CLIENTS`" >> $GITHUB_STEP_SUMMARY
         env:
           GITHUB_ENV: ${{ github.workspace }}/matrix_env
 
@@ -43,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        client: ${{fromJson(needs.build.outputs.clients)}}
+        client: ${{fromJson(env.CLIENTS)}}
         ruby-version: ["3.2"]
       fail-fast: false
     steps:
