--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
             CLIENTS=$(ls lib/customization/*.rb | xargs -n1 basename | sed 's/.rb$//' | jq -R -s -c 'split("\n")[:-1]' | jq -c .)
             echo "CLIENTS=\"$CLIENTS\"" >> $GITHUB_ENV
           fi
-      - run: echo "🍏 The clients env var was set to ${{ steps.set-matrix.outputs.clients }}."
+      - run: echo "🍏 The clients env var was set to ${{ env.CLIENTS }}."
         # env:
         #   GITHUB_ENV: ${{ github.workspace }}/matrix_env
       - run: |
