--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
         run: |
           {
             echo "CI defaults to running for 'culturecode' client only on PRs and all clients on master."
+            echo ""
             echo "To run for all clients via a PR you can trigger this Github Action manually and set the 'Run all clients' option."
+            echo ""
             echo "| Arg                 | Value |"
             echo "| ------------------- | ----- |"
             echo "| Clients | ${{ steps.set-matrix.outputs.clients }} |"
